--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 visibility: visible
             }
         }
-    </style><noscript>
+    </style>
+    <noscript>
         <style amp-boilerplate>
             body {
                 -webkit-animation: none;
@@ -1380,7 +1381,7 @@
                 <div class="message__title">
                     Leave us a message and we will get back to you as soon as possible
                 </div>
-                <form class="message-form message-form_mobile">
+                <form action="./form-action.json" target="_blank" class="message-form message-form_mobile">
                     <label for="message-form__name-input"
                         class="message-form__label message-form__label_name">Name</label>
                     <input type="text" placeholder="Name" class="message-form__input" id="message-form__name-input"
@@ -1403,7 +1404,7 @@
                 <div class="message__title">
                     Leave us a message and we will get back to you as soon as possible
                 </div>
-                <form class="message-form message-form_desktop">
+                <form action="./form-action.json" target="_blank" class="message-form message-form_desktop">
                     <label for="message-form__name-input"
                         class="message-form__label message-form__label_name">Name</label>
                     <input type="text" placeholder="Name" class="message-form__input" id="message-form__name-input"
