--- a/index.html
+++ b/index.html
@@ -945,23 +945,6 @@
             background-color: #fdfdfd;
         }
 
-        .products.products_desktop .products__split-line {
-            height: 528.94px;
-            width: 1px;
-            border: none;
-            background: black;
-            position: absolute;
-            top: 120px;
-        }
-
-        .products.products_desktop .products__split-line.products__split-line_first {
-            left: 438.75px;
-        }
-
-        .products.products_desktop .products__split-line.products__split-line_second {
-            right: 438.75px;
-        }
-
         .product-card .product-card__content {
             display: flex;
             flex-direction: column;
@@ -1041,6 +1024,21 @@
             max-width: 292px;
             font-size: 15px;
             letter-spacing: 1.5px;
+        }
+
+        .product-card.product-card_desktop:not(:last-child) {
+            position: relative;
+        }
+
+        .product-card.product-card_desktop:not(:last-child)::after {
+            content: "";
+            color: black;
+            background: black;
+            height: 100%;
+            width: 1px;
+            position: absolute;
+            top: 60px;
+            right: -7.5px;
         }
 
         .info {
@@ -2588,8 +2586,6 @@
             </amp-carousel>
         </div>
         <div class="products products_desktop">
-            <hr class="products__split-line products__split-line_first">
-            <hr class="products__split-line products__split-line_second">
             <div class="product-card product-card_desktop">
                 <div class="product-card__pic product-card__pic_1"></div>
                 <div class="product-card__content">
