--- a/index.html
+++ b/index.html
@@ -1125,48 +1125,24 @@
             width: 100%;
             display: flex;
             justify-content: flex-end;
+            padding: 22px 16px 18px 0px;
         }
 
         .message .message__content {
-            display: flex;
-            flex-direction: column;
+            width: 223px;
         }
 
         .message .message__content .message__title {
             text-align: center;
-        }
-
-        .message.message_mobile {
-            background-image: url("../img/message.jpg");
-            background-size: auto 100%;
-            background-position-x: 72%;
-            background-repeat: no-repeat;
-            padding: 22px 16px 18px 0px;
-        }
-
-        .message.message_mobile .message__content {
-            width: 75.33%;
-        }
-
-        .message.message_mobile .message__content .message__title {
             font-size: 10px;
             letter-spacing: 0.4px;
         }
 
-        .message.message_desktop {
-            display: none;
+        .message.message_bg {
             background-image: url("../img/message.jpg");
-            padding: 107px 90px 38px 0px;
-        }
-
-        .message.message_desktop .message__content {
-            width: 33.614%;
-        }
-
-        .message.message_desktop .message__content .message__title {
-            font-size: 16px;
-            letter-spacing: 0.64px;
-            padding: 0px 30px;
+            background-size: auto 100%;
+            background-position-x: 72%;
+            background-repeat: no-repeat;
         }
 
         .message-form {
@@ -1174,11 +1150,29 @@
             flex-direction: column;
         }
 
+        .message-form .message-form__label {
+            font-size: 12px;
+            letter-spacing: 0.48px;
+            margin-bottom: 3px;
+            margin-top: 8px;
+        }
+
+        .message-form .message-form__label.message-form__label_name {
+            margin-top: 0px;
+        }
+
         .message-form .message-form__input {
             border: 1px solid #8e9993;
             background: #fff;
             color: rgba(0, 0, 0, 0.51);
             font-family: "Prata", serif;
+            font-size: 10px;
+            letter-spacing: 0.4px;
+            padding: 6px;
+        }
+
+        .message-form .message-form__input.message-form__input_textarea {
+            height: 81px;
         }
 
         .message-form .message-form__input:focus {
@@ -1209,6 +1203,11 @@
             border: none;
             color: #fff;
             font-family: "Prata", serif;
+            font-size: 14px;
+            letter-spacing: 0.56px;
+            margin-top: 25px;
+            padding: 6px;
+            line-height: 17px;
         }
 
         .message-form .message-form__submit:hover {
@@ -1224,62 +1223,6 @@
         .message-form .message-form__submit:disabled {
             background-color: rgba(142, 153, 147, 0.4);
             color: rgba(255, 255, 255, 0.5098039216);
-        }
-
-        .message-form.message-form_mobile .message-form__label {
-            font-size: 12px;
-            letter-spacing: 0.48px;
-            margin-bottom: 3px;
-            margin-top: 8px;
-        }
-
-        .message-form.message-form_mobile .message-form__label.message-form__label_name {
-            margin-top: 0px;
-        }
-
-        .message-form.message-form_mobile .message-form__input {
-            font-size: 10px;
-            letter-spacing: 0.4px;
-            padding: 6px;
-        }
-
-        .message-form.message-form_mobile .message-form__input.message-form__input_textarea {
-            height: 81px;
-        }
-
-        .message-form.message-form_mobile .message-form__submit {
-            font-size: 14px;
-            letter-spacing: 0.56px;
-            margin-top: 25px;
-            padding: 6px;
-            line-height: 17px;
-        }
-
-        .message-form.message-form_desktop .message-form__label {
-            font-size: 16px;
-            letter-spacing: 0.64px;
-            margin-bottom: 7px;
-            margin-top: 21px;
-        }
-
-        .message-form.message-form_desktop .message-form__input {
-            font-size: 14px;
-            letter-spacing: 0.56px;
-            padding: 10px;
-            height: 41px;
-        }
-
-        .message-form.message-form_desktop .message-form__input.message-form__input_textarea {
-            height: 152px;
-        }
-
-        .message-form.message-form_desktop .message-form__submit {
-            width: 50%;
-            align-self: flex-end;
-            font-size: 16px;
-            letter-spacing: 0.64px;
-            height: 56px;
-            margin-top: 38px;
         }
 
         .media {
@@ -1330,6 +1273,51 @@
         }
 
         @media (min-width: 1280px) {
+            .message {
+                padding: 107px 90px 38px 0px;
+            }
+
+            .message .message__content {
+                width: 33.614%;
+            }
+
+            .message .message__content .message__title {
+                font-size: 16px;
+                letter-spacing: 0.64px;
+                padding: 0px 30px 20px;
+            }
+
+            .message.message_bg {
+                background-position-x: 0%;
+            }
+
+            .message-form .message-form__label {
+                font-size: 16px;
+                letter-spacing: 0.64px;
+                margin-bottom: 7px;
+                margin-top: 21px;
+            }
+
+            .message-form .message-form__input {
+                font-size: 14px;
+                letter-spacing: 0.56px;
+                padding: 10px;
+                height: 41px;
+            }
+
+            .message-form .message-form__input.message-form__input_textarea {
+                height: 152px;
+            }
+
+            .message-form .message-form__submit {
+                width: 50%;
+                align-self: flex-end;
+                font-size: 16px;
+                letter-spacing: 0.64px;
+                height: 56px;
+                margin-top: 38px;
+            }
+
             .footer {
                 display: flex;
                 flex-direction: row-reverse;
@@ -1425,14 +1413,6 @@
             }
 
             .wrapper .info_desktop {
-                display: flex;
-            }
-
-            .wrapper .message_mobile {
-                display: none;
-            }
-
-            .wrapper .message_desktop {
                 display: flex;
             }
         }
@@ -2797,35 +2777,12 @@
                 </div>
             </div>
         </div>
-        <div class="message message_bg message_mobile">
+        <div class="message message_bg">
             <div class="message__content">
                 <div class="message__title">
                     Leave us a message and we will get back to you as soon as possible
                 </div>
-                <form action="./form-action.json" target="_blank" class="message-form message-form_mobile">
-                    <label for="message-form__name-input"
-                        class="message-form__label message-form__label_name">Name</label>
-                    <input type="text" placeholder="Name" class="message-form__input" id="message-form__name-input"
-                        name="name" autocomplete="off" required>
-                    <label for="message-form__email-input"
-                        class="message-form__label message-form__label_email">Email</label>
-                    <input type="email" placeholder="Email" class="message-form__input" id="message-form__email-input"
-                        name="email" autocomplete="on" required>
-                    <label for="message-form__subject-input"
-                        class="message-form__label message-form__label_subject">Subject</label>
-                    <textarea name="subject" id="message-form__subject-input"
-                        class="message-form__input message-form__input_textarea" placeholder="Subject"
-                        required></textarea>
-                    <input type="submit" class="message-form__submit" value="Send message">
-                </form>
-            </div>
-        </div>
-        <div class="message message_bg message_desktop">
-            <div class="message__content">
-                <div class="message__title">
-                    Leave us a message and we will get back to you as soon as possible
-                </div>
-                <form action="./form-action.json" target="_blank" class="message-form message-form_desktop">
+                <form action="./form-action.json" target="_blank" class="message-form">
                     <label for="message-form__name-input"
                         class="message-form__label message-form__label_name">Name</label>
                     <input type="text" placeholder="Name" class="message-form__input" id="message-form__name-input"
